crates/criticalup-cli/tests/snapshots/cli__doc__help_message.snap
---
source: crates/criticalup-cli/tests/cli/doc.rs
expression: repr
---
exit: exit status: 0

empty stdout

stderr
------
Open the documentation for the current toolchain

Usage:
  criticalup-test doc [OPTIONS]

Options:
      --project <PROJECT>           Path to the manifest `criticalup.toml`
      --path                        Only print the path to the documentation location
  -v, --verbose...                  Enable debug logs, -vv for trace
      --log-format <LOG_FORMAT>     Which logger to use [default: default] [possible values: default, pretty, json]
      --log-level [<LOG_LEVEL>...]  Tracing directives
  -h, --help                        Print help
------
